# graphics-testing

./: .editorconfig  .gitignore  CMakeLists.txt  Makefile  README.md  TODO.md  docs.md  notes.md
docs/: design.md  docs.md  math.md  notes.md  notes_2.md  notes_3.md  notes_4.md  notes_5.md  notes_6.md  notes_7.md  opengl.md  questions.md  spacespace.md
res/shaders/: basic.frag  basic.vert  default.frag  default.vert
shaders/: color.frag
src/: engine.h  graphics.c  graphics.h  main.c  main.h  main_bk.c  state.h  types.h  window.c  window.h
src/graphics/: atlas.c  atlas.h  mesh.c  mesh.h  renderer.c  renderer.h  shader.c  shader.h  shader_utils.c  shader_utils.h  texture.c  texture.h
src/input/: input.c  input.h
src/logging/: log.h
src/math/: math.h
src/mesh/: mesh.c  mesh.h
src/model/: model.c  model.h
src/renderer/: renderer.c  renderer.h
src/scene/: camera.c  camera.h  entity.h  model.h  player.h  scene.c  scene.h  tilemap.h
src/shader/: shader.c  shader.h  shader_utils.c  shader_utils.h
src/shaders/: shader.c  shader.h
src/texture/: texture.c  texture.h
src/util/: array_list.c  array_list.h  time.h  utils.h
src/utils/: debug.h  style.h  time.h
src/window/: window.c  window.h
